# NetGuardian

./: .gitignore  Cargo.toml  README.md  netguardian.service
src/: adaptive_scheduler.rs  cache_manager.rs  cli.rs  community_plugins.rs  download_manager.rs  executor.rs  ipc.rs  job.rs  main.rs  metrics.rs  orchestrator.rs  plugin_manager.rs  process_supervisor.rs  queue_manager.rs  retry_engine.rs  rule_engine.rs  storage.rs
src/event_bus/: bus.rs  events.rs  mod.rs
src/monitor/: connectivity.rs  dns.rs  gateway.rs  interface.rs  mod.rs
